refactor: 코드 스타일 개선, 인덴트 감소, toList 적용 (#107)